# doc_data

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: cidi.yml  dev-tests.yml  production-tests.yml  pylint.yml  python-package.yml
data/: dat.csv  mvi.csv
notebooks/: Query.ipynb  Untitled.ipynb  relatório.0.5.6.ipynb
queries/: yobj.json
src/: conftest.py
src/doc_data/: db.py  main.py  processor.py  query.py  searchpipeline.py  stanza_query.py  tools.py
tests/: test_db.py  test_main.py  test_processor.py  test_query.py  test_tools.py
tests/data/: Lysias (0540) - For Callias (005).json  Lysias (0540) - For Callias (005).pickle
