[tool.poetry]
name = "doc_data"
version = "0.3.10"
description = "Data collector for my PhD"
authors = ["Caio Geraldes <caioaguida@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "^1.22.1"
pandas = "^1.3.5"
scikit-learn = ">=0.24.2,<0.25.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
cltk = "^1.0.22"
stanza = "^1.3.0"
tqdm = "^4.62.3"
importlib-metadata= "^4.8.2"
python-dotenv = "^0.19.2"
pymongo = {extras = ["srv"], version = "^4.1.0"}
dnspython = "2.2.0"
torch = "1.11.0"
pandas-stubs = "^1.2.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.1"
flake8 = "^4.0.1"
black = "^21.12b0"
pylint = "^2.12.2"
mypy = "^0.931"
pytest = "^6.2.5"
ipython = "^8.1.1"
pytest-datafiles = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

